dev-ops/cr-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: cr-service
spec:
  type: ClusterIP
  selector:
    app: cr
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
