dev-ops/cr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cr-deployment
  labels:
    app: cr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cr
  template:
    metadata:
      labels:
        app: cr
    spec:
      containers:
      - name: cr
        image: buckeyja/cr:1.0
        ports:
        - containerPort: 80
