dev-ops/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cr
  labels:
    app: cr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cr
  template:
    metadata:
      labels:
        app: cr
    spec:
      containers:
      - name: cr
        image: buckeyja/cr:1.0
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 93m
            memory: 263M
          limits:
            cpu: 8829m
            memory: 932M
---
apiVersion: v1
kind: Service
metadata:
  name: cr
spec:
  type: ClusterIP
  selector:
    app: cr
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: "2022-06-24T20:55:54Z"
  generation: 1
  name: cr
  namespace: default
  resourceVersion: "7377006"
  uid: 40ebf8e4-8dfd-40e3-9574-7de8aa10442a
spec:
  ingressClassName: nginx
  rules:
  - host: www.cincirobots.com
    http:
      paths:
      - backend:
          service:
            name: cr
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer:
    ingress:
    - hostname: a909d9e5436074f4fa51ceae112d0f0c-795542476.us-east-2.elb.amazonaws.com
